# polardbx-engine

./: .aone.yml  .clang-format  .clangd  .gdbinit  .gitignore  CMakeLists.txt  Jenkinsfile  MYSQL_VERSION  README.md  VERSION  build.sh  config.h.cmake  lib
extra/IS/: CMakeLists.txt
extra/IS/cluster/: CMakeLists.txt  build.sh  install.sh
extra/IS/cluster/client/: cli.cc  cli_sdk.cc  cli_sdk.h  dst_cli.cc  dst_cli_sdk.cc  dst_cli_sdk.h
extra/IS/cluster/memcached/: consts_def.h  memcached_easyNet.cc  memcached_easyNet.h  memcached_object.cc  memcached_object.h  memcached_utils.h  text_request.cc  text_request.h  text_response.cc  text_response.h
extra/IS/cluster/sample/: cluster.conf  sample.cc  servers.conf  start_all_servers.sh  start_server.sh  stop_all_servers.sh
extra/IS/cluster/service/: flags.cc  server.cc  state_machine.cc  state_machine.h  state_machine_server.cc  state_machine_server.h  state_machine_service.cc  state_machine_service.h
extra/IS/cluster/storage/: data_storage.cc  data_storage.h
extra/IS/cluster/test/: dst_func_test.cc  func_test.cc
extra/IS/cluster/unittest/: gunit_test_main.cc  memcached_object-t.cc  rd_paxos_log-t.cc  rd_raft_log-t.cc  text_request-t.cc  text_response-t.cc
extra/IS/cmake/: easy.cmake  mysql.cmake  protobuf.cmake  rocksdb.cmake
extra/IS/consensus/: CMakeLists.txt  README.md  build.sh  main.cc
extra/IS/consensus/algorithm/: configuration.cc  crc.cc  file_paxos_log.cc  log_meta_cache.cc  mem_paxos_log.cc  msg_compress.cc  paxos.cc  paxos_error.cc  paxos_log_cache.cc  paxos_server.cc  rd_paxos_log.cc  witness.cc
extra/IS/consensus/client/: dummy_leader.cc  dummy_learner.cc  learner_client.cc  learner_server.cc  single_leader.cc
extra/IS/consensus/example/: CMakeLists.txt  benchmark.cc  benchmark3.cc  benchmark_compression.cc  echo_debug.cc  echo_learner.cc  echo_learner_client.cc  echo_purgelog.cc
extra/IS/consensus/include/: client_service.h  consensus.h  crc.h  easyNet.h  files.h  learner_client.h  learner_server.h  log_meta_cache.h  mem_paxos_log.h  msg_compress.h  multi_process_queue.h  net.h  paxos.h  paxos_configuration.h  paxos_error.h  paxos_log_cache.h  paxos_option.h  paxos_server.h  service.h  (+2 more)
extra/IS/src/: CMakeLists.txt
extra/IS/unittest/: CMakeLists.txt  client_service-t.cc  consensus-add-t.cc  consensus-async-t.cc  consensus-bug-t.cc  consensus-crash-t.cc  consensus-crash1-t.cc  consensus-del-t.cc  consensus-leader-degrade-t.cc  consensus-leader-transfer-t.cc  consensus-learner-t.cc  consensus-priv-t.cc  consensus-purge-t.cc  consensus-replicate-with-cache-log-t.cc  consensus-t.cc  consensus-trx-t.cc  consensus1-t.cc  consensus2-t.cc  easyNet-t.cc  log_meta_cache-t.cc  misc-t.cc  msg_compress-t.cc  paxos_log-t.cc  paxos_log_cache-t.cc  pxserror-t.cc  service-t.cc  tmp-t.cc  witness-t.cc
plugin/polarx_rpc/: CMakeLists.txt  common_define.h  global_defines.h  polarx_rpc.cc  polarx_rpc.h  polarx_rpc_protobuf.cmake  process_protobuf_file.cmake
plugin/polarx_rpc/coders/: buffering_command_delegate.h  callback_command_delegate.cc  callback_command_delegate.h  command_delegate.h  custom_command_delegates.h  notices.cc  notices.h  polarx_encoder.cc  polarx_encoder.h  protocol_fwd.h  streaming_command_delegate.cc  streaming_command_delegate.h  xdecimal.h
plugin/polarx_rpc/executor/: bloomfilter.cc  bloomfilter.h  error.h  executor.cc  executor.h  expr.cc  expr.h  handler_api.cc  handler_api.h  log.h  meta.cc  meta.h  murmurhash3.cc  murmurhash3.h  parse.cc  parse.h  physical_backfill.cc  physical_backfill.h  protocol.cc  protocol.h
plugin/polarx_rpc/helper/: chrono.h  str_converter.h  to_string.h
plugin/polarx_rpc/libeasy_bench/: easy_net_perf.cc  easy_net_perf.h
plugin/polarx_rpc/protocol/: polarx.proto  polarx_connection.proto  polarx_datatypes.proto  polarx_exec_plan.proto  polarx_expect.proto  polarx_expr.proto  polarx_notice.proto  polarx_physical_backfill.proto  polarx_resultset.proto  polarx_session.proto  polarx_sql.proto
plugin/polarx_rpc/secure/: account_verification_handler.cc  account_verification_handler.h  account_verification_interface.h  auth_challenge_response.h  authentication_interface.h  challenge_response_verification.h  native_verification.cc  native_verification.h  sha256_password_cache_interface.h
plugin/polarx_rpc/server/: epoll.h  epoll_group_ctx.h  listener.h  server.h  server_variables.cc  server_variables.h  socket_operator.h  tcp_connection.h  timer_heap.h
plugin/polarx_rpc/session/: flow_control.cc  flow_control.h  pkt.h  request_cache.h  session.cc  session.h  session_base.cc  session_base.h  session_manager.cc  session_manager.h
plugin/polarx_rpc/sql_query/: getter_any.h  identifier.h  query_formatter.cc  query_formatter.h  query_string_builder.cc  query_string_builder.h  raw_binary.h  raw_string.h  sql_statement_builder.cc  sql_statement_builder.h  to_string.h
plugin/polarx_rpc/utility/: array_queue.h  atomicex.h  backoff.h  buffer.h  buffered_output_stream.h  cpuinfo.h  error.h  histogram.h  lru.h  number.h  perf.cc  perf.h  random.h  time.h
storage/xengine/: CMakeLists.txt  get_xengine_files.sh  server_diff
storage/xengine/api/: xengine_api.cc  xengine_api.h
storage/xengine/core/: .gitignore  CMakeLists.txt  README.md  USERS.md  build.sh  pt_beilou.sh  src.mk
storage/xengine/dict/: dd_operations.cc  dd_operations.h  log_ddl.cc  log_ddl.h  properties_collector.cc  properties_collector.h  xdb_cf_manager.cc  xdb_cf_manager.h  xdb_cf_options.cc  xdb_cf_options.h  xdb_datadic.cc  xdb_datadic.h  xdb_sst_info.cc  xdb_sst_info.h
storage/xengine/handler/: ha_xengine.cc  ha_xengine.h  ha_xengine_proto.h  handler_alter.cc  handler_alter.h  xdb_i_s.cc  xdb_i_s.h
storage/xengine/index/: event_listener.cc  event_listener.h  xdb_index_merge.cc  xdb_index_merge.h
storage/xengine/script/: dingding.py
storage/xengine/tools/: mysql_ldb.cc
storage/xengine/util/: ib_ut0counter.h  logger.h  my_io_perf.h  xdb_buff.h  xdb_compact_filter.h  xdb_comparator.h  xdb_mutex_wrapper.cc  xdb_mutex_wrapper.h  xdb_threads.cc  xdb_threads.h  xdb_utils.cc  xdb_utils.h
(+8385 files in other folders)
